-----------------------
PVFS2 Release ChangeLog
-----------------------

pvfs2-1.3.3-pre1
===============

pvfs2-1.3.2
===============
- new configure option for kernels which export internal symbols: 
	--disable-kernel-aio
- fix for getattr error handling
- fix for trove printing out a resource after (sometimes) invalidating it

pvfs2-1.3.1
===============
- ib: add memory registration caching
- ib: add support for cancel operation
- ib: fix minor protocol problems
- ib: cleanup build
- better pvfs2-client and pvfs2-client-core logging
- --enable-fast was broken
- fix compile error on FC3 and RHEL 2.6.9 kernels
- async i/o support (but needs libaio and libaio-devel at this time)
- "trusted ports"
- --enable-strict now compiles w/ a lot fewer warnings
- fixed timestamp problems for pvfs2 files
- listeattr system interface function 
- fixed bugs in timestamps
- fixed bugs in zero-fill handling
- no longer ship generated .c files from .sm. instead, ship the sm parser
  (allows for easier release patching)
- Phil Carns: server checks fs id on startup
- Phil Carns: --num-dfiles option to pvfs2-genconfig
- Phil Carns: fix setgid suport
- Phil Carns: proper symlink support (created as 777, no way to change them)
- Lots of portability fixes.  PVFS2 now builds on Darwin (userspace, no
  kernel)
- better tests for location of Berkely DB headers/libraries

- Trach-Minh Tran <trach-minh.tran@epfl.ch> reported bug in append mode. fixed
- 


pvfs2-1.3.0
===============
- Murali Vilayannur contributed extened attribute support to the VFS interface
- Murali and Dean Hildebrand also worked on implementing readv and writev in
  the VFS interface
- Phil Carns contributed logging improvements to pvfs2-client and pvfs2-server
- Phil also contributed improvements to the request processor which should
  help speed up some concurrent workloads.
- Phil further contributed protocol versioning to PVFS2.  Major version