@@ -4,6 +4,7 @@ PVFS2 Release ChangeLog
 
 pvfs2-1.3.3-pre1
 ===============
+- ib: separate config options for includes and libraries, optionally
 
 pvfs2-1.3.2
 ===============
